--- a/src/components/leftBar/leftBar.scss
+++ b/src/components/leftBar/leftBar.scss
@@ -1,16 +1,31 @@
 .leftBar{
-    flex: 3;
-    height: calc(100vh - 50px );
+    flex: 2;
+    height: calc(100vh - 70px );
     overflow-y: scroll;
     position: sticky;
-    top: 50px;
+    top: 70px;
+
+    &::-webkit-scrollbar{
+        display: none;
+    }
 
     .container{
         padding: 20px;
+
+        hr{
+            margin: 20px 0px;
+            border: none;
+            height: 0.5px;
+            background-color: lightgray;
+        }
         .menu{
             display: flex;
             flex-direction: column;
-            gap: 20px;
+            gap: 7px;
+
+            span{
+                font-size: 14px;
+            }
 
             .user{
                 display: flex;
@@ -23,18 +38,23 @@
                     border-radius: 50%;
                     object-fit: cover;
                 }
-                span{}
+                span{
+                    font-size: 14px;
+                }
             }
             .item{
                 display: flex;
                 align-items: center;
                 gap: 10px;
+                font-size: 10px;
 
                 img{
                     width: 30px;
                     height: 30px;
                 }
-                span{}
+                span{
+                    font-size: 14px;
+                }
             }
         }
     }
