--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,4 +1,5 @@
 .navbar{
+    flex: 2;
     height: 50px;
     display: flex;
     align-items: center;
@@ -7,6 +8,8 @@
     position: sticky;
     top: 0;
     z-index: 999;
+    border-bottom: 1px solid #ccc;
+    background-color: white;
    
 
     .left{
