--- a/src/components/post/post.scss
+++ b/src/components/post/post.scss
@@ -49,4 +49,16 @@
             margin-top: 20px;
         }
     }
+    .info{
+        display: flex;
+        align-items: center;
+        gap: 20px;
+
+        .item{
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            font-size: 14px;
+        }
+    }
 }
