--- a/src/components/rightBar/rightBar.scss
+++ b/src/components/rightBar/rightBar.scss
@@ -1,5 +1,6 @@
 .rightBar{
-    flex: 3;  height: calc(100vh - 70px );
+    flex: 3;  
+    height: calc(100vh - 70px );
     overflow-y: scroll;
     position: sticky;
     top: 70px;
