--- a/src/components/leftBar/leftBar.scss
+++ b/src/components/leftBar/leftBar.scss
@@ -1,3 +1,5 @@
+@import "../../App.scss";
+
 .leftBar{
     flex: 2;
     height: calc(100vh - 70px );
@@ -6,6 +8,10 @@
     top: 70px;
 
     &::-webkit-scrollbar{
+        display: none;
+    }
+
+    @include mobile{
         display: none;
     }
 
