--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,3 +1,5 @@
+@import "../../App.scss";
+
 .navbar{
     flex: 2;
     height: 50px;
@@ -10,17 +12,23 @@
     z-index: 999;
     border-bottom: 1px solid #ccc;
     background-color: white;
-   
 
     .left{
         display: flex;
         align-items: center;
         gap: 30px;
+
+        // @include mobile{
+        //     display: none;
+        // }
+
         span{
             font-weight: bold;
             font-size: 20px;
             color: darkblue;
+
         }
+
         .search{
             display: flex;
             align-items: center;
@@ -31,6 +39,10 @@
             input{
                 border: none;
                 width: 500px;
+
+                @include mobile{
+                    display: none;
+                }
             }
         }
     }
@@ -38,6 +50,10 @@
         display: flex;
         align-items: center;
         gap: 20px; 
+
+        @include mobile{
+            display: none;
+        }
 
         .user{
             display: flex;
