--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -1,3 +1,5 @@
+@import "../../App.scss";
+
 .profilePage {
     display: flex;
 }
@@ -35,7 +37,7 @@
         
 
         .userInfo {
-            height: 180px;
+            height: 150px;
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -47,13 +49,54 @@
             margin-top: -50px;
             border-radius: 10px;
 
+            @include mobile{
+                display: none;
+            }
+
             .left{
                 flex: 1;
                 display: flex;
                 gap: 10px;
                 padding-left: 5px;
             }
-            .center{flex: 1;}
+            .center{
+                flex: 1;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                gap: 10px;
+
+                span{
+                    font-size: 25px;
+                    font-weight: 500;
+                }
+
+                .info{
+                    width: 100%;
+                    display: flex;
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-around;
+
+                    .item{
+                        display: flex;
+                        align-items: center;
+                        gap: 5px;
+
+                        span{
+                            font-size: 12px;
+                        }
+                    }
+                }
+                button{
+                    border: none;
+                    background-color: #5271ff;
+                    color: white;
+                    padding: 10px 20px;
+                    border-radius: 5px;
+                    cursor: pointer;
+                }
+            }
             .right{
                 flex: 1;
                 display: flex;
